syntax = "proto3";

package cz.micro.proto;

enum TimeFrameUnit {
  second = 0;
  minute = 1;
  hour = 2;
  pre_day = 3;
  eod_day = 4;
  first_day_in_week = 5;
  last_day_in_week = 6;
}

message TimeFrame {
  uint32 value = 1;
  TimeFrameUnit unit = 2;
}
/*
message Date {
  // Year of the date. Must be from 1 to 9999, or 0 to specify a date without
  // a year.
  uint32 year = 1;

  // Month of a year. Must be from 1 to 12, or 0 to specify a year without a
  // month and day.
  uint32  month = 2;

  // Day of a month. Must be from 1 to 31 and valid for the year and month, or 0
  // to specify a year by itself or a year and month where the day isn't
  // significant.
  uint32  day = 3;
}*/